# octo-usage

./: .env.sample  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
octo_usage/: __main__.py  dataclasses.py  logging_config.py  octopus.py  postgres.py
test/: test_cli_infer.py  test_dataclasses.py  test_octopus.py  test_postgres.py
test/data/: octopus_consumption.py
